
        CHANGES IN spatstat.explore VERSION 3.1-0.026

OVERVIEW

    o We thank Jonatan Gonzalez for contributions.
    
    o Changed the calculation of standard errors in density.ppp and relrisk.ppp.

    o Inline arithmetic for function tables ('fv') and arrays ('fasp')

    o Standard error calculation for Smooth.ppp (experimental)
    
    o multitype pair correlation functions can save numerator and denominator.

    o multitype inhomogeneous J functions.

    o More support for automatic bandwidth selection.
    
    o Bug fixes in calculation of standard errors.

NEW FUNCTIONS

    o Math.fv, Complex.fv, Summary.fv, Ops.fv
    Methods for arithmetic operations for function tables (class 'fv')
    
    o Math.fasp, Complex.fasp, Summary.fasp, Ops.fasp
    Methods for arithmetic operations for function arrays (class 'fasp')

    o Gcross.inhom, Gdot.inhom
    Multitype G functions for inhomogeneous point processes.
    
    o Jcross.inhom, Jdot.inhom, Jmulti.inhom
    Multitype J functions for inhomogeneous point processes.

    o summary.bw.optim, print.summary.bw.optim
    Method for 'summary' of optimised bandwidth objects (class 'bw.optim').
    These are the objects produced by the bandwidth selection functions
    such as bw.diggle, bw.scott, bw.pcf
    
SIGNIFICANT USER-VISIBLE CHANGES

    o density.ppp
    Standard error calculation is now available with any smoothing kernel.

    o density.ppp
    The interpretation of 'weights' in the calculation of standard error
    has changed. New argument 'wtype' controls this interpretation.
    
    o relrisk.ppp
    The interpretation of 'weights' in the calculation of standard error
    has changed. New argument 'wtype' controls this interpretation.

    o relrisk.ppp
    New argument 'fudge' specifies a constant numeric value that will be
    added to each estimate of point process intensity before calculation of
    relative risk.
    
    o Smooth.ppp