@@ -3,4 +3,4 @@ date version nhelpfiles nobjects ndatasets Rlines srclines
 "2022-11-08" "3.0-4" 226 507 0 30638 6295
 "2023-01-26" "3.0-6" 226 507 0 30644 6295
 "2023-03-14" "3.1-0" 227 508 0 30724 6295
-"2023-04-25" "3.1-0.026" 234 523 0 31508 6365
+"2023-05-02" "3.1-0.027" 234 523 0 31541 6365
